<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/define_dimen_12"
    tools:viewBindingIgnore="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_6"
            android:layout_toStartOf="@+id/txt_sum_price_order"
            android:text="@string/order_detail"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_sum_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_list_food_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:text="@string/payment_method"
        android:textColor="@color/colorTextSecond"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/txt_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:background="@drawable/bg_shape_white_conner_gray_6"
        android:padding="@dimen/define_dimen_12"
        android:text="@string/cash"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:text="@string/fullname"
        android:textColor="@color/colorTextSecond"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:background="@drawable/bg_shape_white_conner_gray_6"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/define_dimen_12"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:text="@string/phone_number"
        android:textColor="@color/colorTextSecond"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:background="@drawable/bg_shape_white_conner_gray_6"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:padding="@dimen/define_dimen_12"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:text="@string/address"
        android:textColor="@color/colorTextSecond"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5"
        android:background="@drawable/bg_shape_white_conner_gray_6"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="@dimen/define_dimen_12"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/define_dimen_10"
            android:layout_weight="1"
            android:background="@drawable/bg_shape_gray_conner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_10"
            android:paddingStart="@dimen/define_dimen_16"
            android:paddingEnd="@dimen/define_dimen_16"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txt_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_shape_green_conner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</LinearLayout>