<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/img_back"
        android:src="@drawable/ic_back"
        android:scaleType="centerCrop"
        android:padding="@dimen/define_dimen_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="@dimen/define_dimen_16"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/define_dimen_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_email_forgot_password"
            android:hint="@string/hint_email"
            android:padding="@dimen/define_dimen_12"
            android:background="@drawable/bg_shape_white_conner_6"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:textColor="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:text="@string/reset_password"
            android:background="@drawable/bg_shape_red_conner_8"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>